update github links

--- a/retype.yml
+++ b/retype.yml
@@ -17,6 +17,6 @@ footer:
     link: https://discord.gg/ETE7ksP8Fd
     icon: /img/discord_24.png
   - text: Github
-    link: https://github.com/xusd-fi
+    link: https://github.com/factor-finance
     icon: mark-github
 favicon: img/favicon.png
